	
*******************************************************************************


                                        sail7

                          A tool for the design of sails and boats
                            Program based on xflr5 source code

                                    Copyright (C) 2012

                                     Andre Deperrois


*******************************************************************************


sail7 v0.04 December 30th, 2012
	- Added display of Luff angle to NURBS section view
	- Improved the calculation and display of NURBS sections
	- Corrected the rotation of the NURBS type sails around the sail's leading edge
	- Improved the formatting of polar data points in the polar properties window
	- Added lift and drag to the graphic results
	- Corrected a bug in the display of bodies
	- Improved the selection of points in the sail section view



sail7 v0.03 November 4th, 2012
	- code published on sourceforge



sail7 v0.02 alpha June 9th, 2012
	- first operational release for alpha-testing



sail7 v0.01 alpha January 4th, 2012
	- concept demonstration